--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,12 @@
     padding: 0;
     margin: 0;
 }
+
+.welcome-message {
+    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
+  }
+  
+  .welcome-description {
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  }
+  
